--- a/index.html
+++ b/index.html
@@ -6,12 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/fonte.css">
+    <link rel="stylesheet" href="css/nav-head.css">
 
     <title>Aprendendo Front-End com MDN</title>
 </head>
 
-<body style="margin: 2% 10%;">
-    <h1 style="text-align: center;">Aprendendo Front-End com MDN</h1>
+<body>
+    <ul class="container ul-none">
+        <li class="content">
+        </li>
+        <li>
+            <h1 class="content">
+                <a class="text-decoration-none" href="index.html">
+                    Aprendendo Front-End com MDN
+                </a>
+            </h1>
+        </li>
+        <li class="content">
+            <a class="text-decoration-none" href="elementsBlockInline.html">Próximo &gt;</a>
+        </li>
+    </ul>
     <hr>
     <p>
     <h2>Iniciando com HTML</h2>
@@ -49,47 +63,6 @@
     </ol>
     </p>
     <hr>
-    <p>
-    <h3>Elementos em bloco versus elementos inline</h3>
-    <table style="width: 25%; background: #ddd; padding: 10px 10px 20px;">
-        <tr>
-            <td>HTML
-                <hr>
-            </td>
-        </tr>
-        <tr>
-            <td style="padding-left: 30px;">
-                &lt;em&gt;primeiro&lt;/em&gt; <br>
-                &lt;em&gt;segundo&lt;/em&gt; <br>
-                &lt;em&gt;terceiro&lt;/em&gt; <br>
-                <br>
-                &lt;p&gt;quarto&lt;/p&gt; <br>
-                &lt;p&gt;quinto&lt;/p&gt; <br>
-                &lt;p&gt;sexto&lt;/p&gt;
-            </td>
-        </tr>
-    </table>
-    <br>
-    <table style="width: 25%; background: #ddd; padding: 10px 10px 20px;">
-        <tr>
-            <td>
-                Saída:
-                <hr>
-            </td>
-        </tr>
-        <tr>
-            <td style="padding-left: 30px;">
-                <em>primeiro</em>
-                <em>segundo</em>
-                <em>terceiro</em>
-    
-                <p>quarto</p>
-                <p>quinto</p>
-                <p>sexto</p>
-            </td>
-        </tr>
-    </table>
-    </p>
 </body>
 
 </html>
