--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="css/fonte.css">
-    <link rel="stylesheet" href="css/nav-head.css">
+    <link rel="stylesheet" href="./css/fonte.css">
+    <link rel="stylesheet" href="./css/nav-head.css">
 
     <title>Aprendendo Front-End com MDN</title>
 </head>
@@ -17,16 +17,15 @@
         </li>
         <li>
             <h1 class="content">
-                <a class="text-decoration-none" href="index.html">
+                <a class="text-decoration-none" href="./index.html">
                     Aprendendo Front-End com MDN
                 </a>
             </h1>
         </li>
         <li class="content">
-            <a class="text-decoration-none" href="elementsBlockInline.html">Próximo &gt;</a>
+            <a class="text-decoration-none" href="./02-inline-block-elements.html">Próximo &gt;</a>
         </li>
     </ul>
-    <hr>
     <p>
     <h2>Iniciando com HTML</h2>
     > HTML (Linguagem de Marcação de Hipertexto) é o código que você usa para estruturar uma página web e seu
