--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h3>Anatomia de um elemento HTML</h3>
     <img style="display: block; margin: auto;"
         src="https://developer.mozilla.org/pt-BR/docs/Learn/Getting_started_with_the_web/HTML_basics/gato-rabujento-pequeno.png"
-        alt="lemento html explicado: tag de abertura, conteúdo, tag de fechamento">
+        alt="elemento html explicado: tag de abertura, conteúdo, tag de fechamento">
     <ol style="display: flex; flex-direction: column; gap: 10px;">
         <li>
             <b>A tag de abertura</b>: Consiste no nome do elemento (no caso, p), envolvido em parênteses angulares de
