--- a/05-some-elements.html
+++ b/05-some-elements.html
@@ -25,7 +25,7 @@
             </h1>
         </li>
         <li class="content">
-            <a class="text-decoration-none" href="./05-some-elements.html">Próximo &gt;</a>
+            <!-- <a class="text-decoration-none" href="./05-some-elements.html">Próximo &gt;</a> -->
         </li>
     </ul>
 
