finalizado a primeria página do MDN

--- a/05-some-elements.html
+++ b/05-some-elements.html
@@ -55,7 +55,7 @@
         </p>
 
         <p>
-            <b>&lt;!-- --&gt;</b> - comentário HTML
+            <b>&lt;!-- --&gt;</b> — comentário HTML
         </p>
     </section>
 </body>
