finalizado a primeria página do MDN

--- a/02-inline-block-elements.html
+++ b/02-inline-block-elements.html
@@ -15,17 +15,17 @@
 <body style="margin: 2% 10%;">
     <ul class="container ul-none">
         <li class="content">
-            <a class="text-decoration-none" href="./index.html">&lt; Anterior</a>
+            <a class="text-decoration-none" href="./index.html" title="Anterior">&lt; Anterior</a>
         </li>
         <li>
             <h1 class="content">
-                <a class="text-decoration-none" href="./index.html">
+                <a class="text-decoration-none" href="./index.html" title="Home">
                     Aprendendo Front-End com MDN
                 </a>
             </h1>
         </li>
         <li class="content">
-            <a class="text-decoration-none" href="./03-voidElements.html">Próximo &gt;</a>
+            <a class="text-decoration-none" href="./03-voidElements.html" title="Próximo">Próximo &gt;</a>
         </li>
     </ul>
     <p>
