--- a/03-voidElements.html
+++ b/03-voidElements.html
@@ -14,17 +14,17 @@
 <body>
     <ul class="container ul-none">
         <li class="content">
-            <a class="text-decoration-none" href="./02-inline-block-elements.html">&lt; Anterior</a>
+            <a class="text-decoration-none" href="./02-inline-block-elements.html" title="Anterior">&lt; Anterior</a>
         </li>
         <li>
             <h1 class="content">
-                <a class="text-decoration-none" href="./index.html">
+                <a class="text-decoration-none" href="./index.html" title="Home">
                     Aprendendo Front-End com MDN
                 </a>
             </h1>
         </li>
         <li class="content">
-            <a class="text-decoration-none" href="./04-attributes.html">Próximo &gt;</a>
+            <a class="text-decoration-none" href="./04-attributes.html" title="Próximo">Próximo &gt;</a>
         </li>
     </ul>
     <section>
