--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </li>
         <li>
             <h1 class="content">
-                <a class="text-decoration-none" href="./index.html">
+                <a class="text-decoration-none" href="./index.html" title="Home">
                     Aprendendo Front-End com MDN
                 </a>
             </h1>
         </li>
         <li class="content">
-            <a class="text-decoration-none" href="./02-inline-block-elements.html">Próximo &gt;</a>
+            <a class="text-decoration-none" href="./02-inline-block-elements.html" title="Próximo">Próximo &gt;</a>
         </li>
     </ul>
     <p>
