--- a/05-some-elements.html
+++ b/05-some-elements.html
@@ -15,17 +15,17 @@
 <body>
     <ul class="container ul-none">
         <li class="content">
-            <a class="text-decoration-none" href="./04-attributes.html">&lt; Anterior</a>
+            <a class="text-decoration-none" href="./04-attributes.html" title="Anterior">&lt; Anterior</a>
         </li>
         <li>
             <h1 class="content">
-                <a class="text-decoration-none" href="./index.html">
+                <a class="text-decoration-none" href="./index.html" title="Home">
                     Aprendendo Front-End com MDN
                 </a>
             </h1>
         </li>
         <li class="content">
-            <!-- <a class="text-decoration-none" href="./05-some-elements.html">Próximo &gt;</a> -->
+            <!-- <a class="text-decoration-none" href="./05-some-elements.html" title="Próximo">Próximo &gt;</a> -->
         </li>
     </ul>
 
